@@ -39,6 +39,7 @@
 		- Added BCC and REFERENCE to the list of headers to fetch in iil_C_FetchHeaders()
 		- Leave messageID unchanged in iil_C_FetchHeaders()
 		- Avoid stripslahes in iil_Connect()
+		- Added patch to iil_SortHeaders() by Richard Green
 		- Removed <br> from error messages (better for logging)
 		- Removed some debuggers (echo ...)
 
@@ -1396,7 +1397,7 @@ function iil_SortHeaders($a, $field, $flag){
 	if (empty($flag)) $flag="ASC";
 	$flag=strtoupper($flag);
 	$stripArr = ($field=='subject') ? array('Re: ','Fwd: ','Fw: ',"\"") : array("\"");
-	
+
 	$c=count($a);
 	if ($c>0){
 		/*
@@ -1410,8 +1411,18 @@ function iil_SortHeaders($a, $field, $flag){
 		$index=array();
 		reset($a);
 		while (list($key, $val)=each($a)){
-			$data=$a[$key]->$field;
-			if (is_string($data)) $data=strtoupper(str_replace($stripArr, "", $data));
+
+			if ($field=="timestamp"){
+				$data = @strtotime($value->date);
+				if ($data != false)
+					$data = $timestamp;
+				}
+			else {
+				$data=$a[$key]->$field;
+				if (is_string($data))
+					$data=strtoupper(str_replace($stripArr, "", $data));
+				}
+
 			$index[$key]=$data;
 		}
 		
